# image-compressor

./: .gitignore  Makefile  README.md  clean.sh  compressor.cabal  package.yaml
.github/workflows/: jekyll-gh-pages.yml  main.yml
api/: index.js  package-lock.json  package.json
app/: Main.hs
frontend/: index.html
src/: ErrorHandling.hs  ImageCompressor.hs  Lib.hs  ParamsHandling.hs  ParsingFiles.hs  PrintClusters.hs
tests/: Testeur.js
tests/imageCompressorHelper/: Main.hs  README.md  fruit.txt  ic.cabal
tests/imageCompressorHelper/Image/: Pixel.hs  Transformer.hs
tests/imageCompressorHelper/Image/File/: Parser.hs  Reader.hs  Writer.hs
