name: ic
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable ich
  main-is: Main.hs
  buildable: True
  build-depends:
      vector -any,
      base -any,
      parsec -any,
      directory -any,
      JuicyPixels -any,
      bytestring -any
  default-language: Haskell2010
  other-modules:
      Image.File.Parser
      Image.File.Reader
      Image.File.Writer
      Image.Pixel
      Image.Transformer
